# multi-agent-stock-advisor

./: .gitignore  README.md
Finance/: data_process.py  download.py  requirements.txt  test_qwen_sentiment.py  train_qwen_risk.py  train_qwen_sentiment.py
Finance/Financial-MCP-Agent/: .env.example  app.py  pyproject.toml
Finance/Financial-MCP-Agent/src/: main.py  runner.py
Finance/Financial-MCP-Agent/src/agents/: bear_researcher.py  bull_researcher.py  debate_common.py  fundamental_agent.py  risk_disclosure_agent.py  summary_agent.py  technical_agent.py
Finance/Financial-MCP-Agent/src/graph/: build_graph.py
Finance/Financial-MCP-Agent/src/memory/: advisory_memory.py
Finance/Financial-MCP-Agent/src/tools/: mcp_client.py  mcp_config.py  openrouter_config.py
Finance/Financial-MCP-Agent/src/utils/: execution_logger.py  logging_config.py
Finance/Financial-MCP-Agent/tests/: test_stock_identifier.py  test_summary_agent_import.py
Finance/us_stock_mcp_server/: mcp_server.py  pyproject.toml
Finance/us_stock_mcp_server/src/: us_stock_data_source.py  utils.py
Finance/us_stock_mcp_server/src/tools/: base.py  financial_reports.py  indices.py  stock_market.py
Finance/us_stock_mcp_server/tests/: test_us_stock_data_source.py
agent/: .env.example  pyproject.toml  test_extraction.py
agent/src/: runner.py
agent/src/agents/: memory_retriever.py  news_agent.py  research_manager.py  value_agent.py
agent/src/graph/: conditional_logic.py
agent/src/tools/: mcp_config.py
agent/src/utils/: llm_clients.py  log_viewer.py  stock_identifier.py
mcp_server/: test_us_stock.py
mcp_server/src/: data_source_interface.py  us_stock_data_source.py
mcp_server/src/formatting/: markdown_formatter.py
ml/: test_risk_model.py  train_qwen_risk.py  train_qwen_sentiment.py
(+5 files in other folders)
