[project]
name = "financial-mcp-agent"
version = "0.1.0"
description = "Multi-agent US-equity analysis pipeline built on LangGraph and MCP"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.6.6",
    "langchain-openai==0.3.30",
    "langchain-core==0.3.74",
    "langchain-mcp-adapters==0.1.9",
    "python-dotenv==1.1.1",
    "requests==2.32.3",
]

[tool.uv]
package = false
