[project]
name = "us-stock-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "lxml>=5.3.0",
    "mcp[cli]>=1.2.0",
    "pandas>=2.2.3",
    "requests>=2.32.3,<3.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
# Local Qwen-LoRA news scoring models. Only needed on a GPU host with the model
# files present and USE_LOCAL_NEWS_MODELS=true. Pulls in torch, so kept optional.
local-models = [
    "peft>=0.17.0,<0.18.0",
    "transformers>=4.51.3,<5.0.0",
]
